PCA sklearn done

--- a/PCA-with-scikit-learn.ipynb
+++ b/PCA-with-scikit-learn.ipynb
@@ -147,8 +147,202 @@
     "```python\n",
     "X = np.genfromtxt('hidden_text.csv', delimiter=',')\n",
     "```\n",
-    "This data has all its points lie in a two-dimensional plane embedded in a much higher dimension.  \n",
+    "This data has all its points lie in a two-dimensional plane embedded in a much higher dimension.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(a)\n",
     "Can you find out what does this data say?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(b)\n",
+    "How much does the first two components have explained in ratio?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exercise 3\n",
+    "Let  \n",
+    "```python\n",
+    "from sklearn.datasets import load_digits\n",
+    "digits = load_digits()\n",
+    "X = digits.data\n",
+    "y = digits.target\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 3(a)\n",
+    "Let `X_new` be the result of applying PCA to `X` with 30 components.  \n",
+    "Use the first two columns as the $x$,$y$-coordinates and plot the points with `c=y` ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 3(b)\n",
+    "Use the first three columns as the $x$,$y$,$z$-coordinates and plot the points with `c=y` ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 3(c)\n",
+    "Use `plt.plot` to plot `model.explained_variance_` .  \n",
+    "What is an appropriate choice of the target dimension?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exercise 4\n",
+    "Let  \n",
+    "```python\n",
+    "mu = np.array([3,4])\n",
+    "cov = np.array([[1.1,1],\n",
+    "                [1,1.1]])\n",
+    "X = np.random.multivariate_normal(mu, cov, 100)\n",
+    "\n",
+    "model = PCA(2)\n",
+    "X_new = model.fit_transform(X)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 4(a)\n",
+    "Let  \n",
+    "```python\n",
+    "X_shifted = X - model.mean_\n",
+    "```\n",
+    "Plot the points (rows) of `X` .  \n",
+    "Plot the points (rows) of `X_shifted` ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 4(b)\n",
+    "Check the rows of `model.components_` are mutually orthogonal and of length 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 4(c)\n",
+    "Let  \n",
+    "```python\n",
+    "X_proj = X_shifted.dot(model.components_.T)\n",
+    "```\n",
+    "Plot the points (rows) of `X_shifted` .\n",
+    "Plot the points (rows) of `X_proj` ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 4(d)\n",
+    "Suppose `model.mean_` and `model.components_` are given.  \n",
+    "Can you find a way to obtained `X` from `X_new` ?"
    ]
   },
   {
