MDS sklearn correct stress formula

--- a/MDS-with-scikit-learn.ipynb
+++ b/MDS-with-scikit-learn.ipynb
@@ -60,7 +60,7 @@
     "- `n_components_`: target dimension\n",
     "- `embedding_`: the embedding in the target dimension stored in an array of shape `(n_samples, n_components)`\n",
     "- `dissimilarity_matrix_`: the dissimilarity matrix in used of shape `(n_samples, n_sample)` \n",
-    "- `stress_`: $\\sum_{i<j}(d_{ij}(X_{\\rm new})^2 - \\delta_{ij})^2$, where $d_{ij}(X)$ is the distance between the $i$-th row and the $j$-th row of $X_{\\rm new}$, and $\\delta_{ij}$ is the distance between the $i$-th row and the $j$-th row of $X$.\n",
+    "- `stress_`: $\\sum_{i<j}(d_{ij}(X_{\\rm new}) - \\delta_{ij})^2$, where $d_{ij}(X)$ is the distance between the $i$-th row and the $j$-th row of $X_{\\rm new}$, and $\\delta_{ij}$ is the distance between the $i$-th row and the $j$-th row of $X$.\n",
     "\n",
     "[Wikipedia: Stress majorization](https://en.wikipedia.org/wiki/Stress_majorization)"
    ]
