KMeans sklearn done

--- a/KMeans-with-scikit-learn.ipynb
+++ b/KMeans-with-scikit-learn.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +74,15 @@
     "##### Exercise 1\n",
     "Let  \n",
     "```python\n",
-    "mu = np.array([3,4])\n",
-    "cov = np.array([[1.1,1],\n",
+    "mu1 = np.array([2.5,0])\n",
+    "cov1 = np.array([[1.1,-1],\n",
+    "                [-1,1.1]])\n",
+    "mu2 = np.array([-2.5,0])\n",
+    "cov2 = np.array([[1.1,1],\n",
     "                [1,1.1]])\n",
-    "X = np.random.multivariate_normal(mu, cov, 100)\n",
-    "```\n",
-    "Let `X_new` be the result of MDS on `X` ."
+    "X = np.vstack([np.random.multivariate_normal(mu1, cov1, 100), \n",
+    "               np.random.multivariate_normal(mu2, cov2, 100)])\n",
+    "```"
    ]
   },
   {
@@ -87,8 +90,9 @@
    "metadata": {},
    "source": [
     "###### 1(a)\n",
-    "Plot points (rows) in `X` .  \n",
-    "Plot points (rows) in `X_new` .  "
+    "Apply the $k$-means algorithm to `X` with $k=2$ and get the prediction `y_new` .  \n",
+    "Plot the points (rows) in `X` with `c=y_new` .  \n",
+    "Print `model.inertia_` ."
    ]
   },
   {
@@ -104,9 +108,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1(b)\n",
-    "Obtain `X_new` several times and redo 1(a).  \n",
-    "Is the results all similar or it can be quite different?"
+    "###### 1(b)\n",
+    "Apply the $k$-means algorithm to `X` with $k=3$ and get the prediction `y_new` .  \n",
+    "Plot the points (rows) in `X` with `c=y_new` .  \n",
+    "Print `model.inertia_` ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 1(c)\n",
+    "Run  \n",
+    "```python\n",
+    "ins = [KMeans(k).fit(X).inertia_ for k in range(1,6)]\n",
+    "plt.plot(np.arange(1,6), ins)\n",
+    "```\n",
+    "What does it means?  \n",
+    "What is a good guess of the number of clusters?"
    ]
   },
   {
@@ -125,10 +153,67 @@
     "##### Exercise 2\n",
     "Let  \n",
     "```python\n",
-    "X = np.genfromtxt('hidden_text.csv', delimiter=',')\n",
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(a)\n",
+    "Apply the $k$-means algorithm to `X` with $k=2$ and get the prediction `y_new` .  \n",
+    "Plot the points (rows) in `X` with `c=y_new` .  \n",
+    "(Each row is in $\\mathbb{R}^4$.  \n",
+    "Just pick arbitrary two coordinates to plot the points.)  \n",
+    "Print `model.inertia_` ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(b)\n",
+    "Apply the $k$-means algorithm to `X` with $k=3$ and get the prediction `y_new` .  \n",
+    "Plot the points (rows) in `X` with `c=y_new` .  \n",
+    "(Each row is in $\\mathbb{R}^4$.  \n",
+    "Just pick arbitrary two coordinates to plot the points.)  \n",
+    "Print `model.inertia_` ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(c)\n",
+    "Run  \n",
+    "```python\n",
+    "ins = [KMeans(k).fit(X).inertia_ for k in range(1,6)]\n",
+    "plt.plot(np.arange(1,6), ins)\n",
     "```\n",
-    "This data has all its points lie in a two-dimensional plane embedded in a much higher dimension.  \n",
-    "Can you find out what does this data say?"
+    "What does it means?  \n",
+    "What is a good guess of the number of clusters?"
    ]
   },
   {
@@ -147,10 +232,9 @@
     "##### Exercise 3\n",
     "Let  \n",
     "```python\n",
-    "from sklearn.datasets import load_digits\n",
-    "digits = load_digits()\n",
-    "X = digits.data\n",
-    "y = digits.target\n",
+    "arr = plt.imread('incrediville-side.jpg')\n",
+    "m,n,c = arr.shape\n",
+    "X = arr.reshape(-1,3)\n",
     "```"
    ]
   },
@@ -159,9 +243,8 @@
    "metadata": {},
    "source": [
     "###### 3(a)\n",
-    "Let `X_new` be the result of applying MDS to `X` with `n_components=2` .  \n",
-    "Plot the points (rows) in `X_new` with `c=y` .  \n",
-    "Print `model.stress_` ."
+    "Print `X.shape` .  \n",
+    "What are the rows in `X` ."
    ]
   },
   {
@@ -178,153 +261,15 @@
    "metadata": {},
    "source": [
     "###### 3(b)\n",
-    "Let `X_new` be the result of applying MDS to `X` with `n_components=3` .  \n",
-    "Plot the points (rows) in `X_new` with `c=y` .  \n",
-    "Print `model.stress_` .  \n",
-    "Is is lower than what you did with in 3(a)?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Exercise 4\n",
-    "For the following `precom`, input it as the precomputed dissimilarity and obtain `X_new` .  \n",
-    "Try to guess the answer beforehand."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### 4(a)\n",
+    "Apply the $k$-means algorighm to `X` and obtain `y_new` .  \n",
     "Let  \n",
     "```python\n",
-    "precom = np.array([[0,1,1],\n",
-    "                   [1,0,1],\n",
-    "                   [1,1,0]])\n",
+    "img = (y_new == 0).reshape(m, n)\n",
+    "plt.imshow(img, cmap='Greys')\n",
     "```\n",
-    "Apply MDS with `n_components=2` .  \n",
-    "Plot the points (rows) in `X_new` ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### 4(b)\n",
-    "Let  \n",
-    "```python\n",
-    "precom = np.array([[0,1,1,1],\n",
-    "                   [1,0,1,1],\n",
-    "                   [1,1,0,1],\n",
-    "                   [1,1,1,0]])\n",
-    "```\n",
-    "Apply MDS with `n_components=2` .  \n",
-    "Plot the points (rows) in `X_new` ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### 4(c)\n",
-    "Let  \n",
-    "```python\n",
-    "precom = np.array([[0,1,1,1],\n",
-    "                   [1,0,1,1],\n",
-    "                   [1,1,0,1],\n",
-    "                   [1,1,1,0]])\n",
-    "```\n",
-    "Apply MDS with `n_components=3` .  \n",
-    "Plot the points (rows) in `X_new` ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### 4(d)\n",
-    "Let  \n",
-    "```python\n",
-    "precom = np.array([[0,1,2,1,1,2,3,2],\n",
-    "                   [1,0,1,2,2,1,2,3],\n",
-    "                   [2,1,0,1,3,2,1,2],\n",
-    "                   [1,2,1,0,2,3,2,1],\n",
-    "                   [1,2,3,2,0,1,2,1],\n",
-    "                   [2,1,2,3,1,0,1,2],\n",
-    "                   [3,2,1,2,2,1,0,1],\n",
-    "                   [2,3,2,1,1,2,1,0]])\n",
-    "precom = np.sqrt(precom)\n",
-    "```\n",
-    "Apply MDS with `n_components=2` .  \n",
-    "Plot the points (rows) in `X_new` .  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### 4(e)\n",
-    "Let  \n",
-    "```python\n",
-    "precom = np.array([[0,1,2,1,1,2,3,2],\n",
-    "                   [1,0,1,2,2,1,2,3],\n",
-    "                   [2,1,0,1,3,2,1,2],\n",
-    "                   [1,2,1,0,2,3,2,1],\n",
-    "                   [1,2,3,2,0,1,2,1],\n",
-    "                   [2,1,2,3,1,0,1,2],\n",
-    "                   [3,2,1,2,2,1,0,1],\n",
-    "                   [2,3,2,1,1,2,1,0]])\n",
-    "precom = np.sqrt(precom)\n",
-    "```\n",
-    "Apply MDS with `n_components=3` .  \n",
-    "Plot the points (rows) in `X_new` .  "
+    "Change `0` to `1` or `2` .  \n",
+    "What do these pictures mean?  \n",
+    "Is the black region always connected?"
    ]
   },
   {
@@ -347,16 +292,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 5\n",
+    "##### Exercise 4\n",
     "Let  \n",
     "```python\n",
-    "mu = np.array([3,4])\n",
-    "cov = np.array([[1.1,1],\n",
+    "mu1 = np.array([2.5,0])\n",
+    "cov1 = np.array([[1.1,-1],\n",
+    "                [-1,1.1]])\n",
+    "mu2 = np.array([-2.5,0])\n",
+    "cov2 = np.array([[1.1,1],\n",
     "                [1,1.1]])\n",
-    "X = np.random.multivariate_normal(mu, cov, 100)\n",
-    "\n",
-    "model = MDS(2)\n",
-    "X_new = model.fit_transform(X)\n",
+    "X = np.vstack([np.random.multivariate_normal(mu1, cov1, 100), \n",
+    "               np.random.multivariate_normal(mu2, cov2, 100)])\n",
     "```"
    ]
   },
@@ -364,8 +310,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### 5(a)\n",
-    "Print `X_new` and `model.embedding_` and check if they are the same."
+    "###### 4(a)\n",
+    "Apply the $k$-means algorithm to `X` and obtain the prediction `y_new` .  \n",
+    "Plot the points (rows) in `X` with `c=y_new` .  \n",
+    "Plot the points (rows) in `model.cluster_centers_` with `c='r'` ."
    ]
   },
   {
@@ -381,9 +329,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### 5(b)\n",
-    "Calculate the distance matrix `dist` between the rows of `X` and the rows of `X` .  \n",
-    "Compare `dist` and `model.dissimilarity_matrix_` and check if they are the same.  "
+    "###### 4(b)\n",
+    "Check if `y_new` and `model.labels_` are the same."
    ]
   },
   {
@@ -399,8 +346,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### 5(c)\n",
-    "Calculate the distance matrix `dist_new` between the rows of `X_new` and the rows of `X_new` ."
+    "###### 4(c)\n",
+    "Compute the inertia and compare your answer with `model.inertia_` .  \n",
+    "Recall that the inertia of a clustered data is  \n",
+    "$$\\sum_{i,j} \\|{\\bf x}_i - \\mu_j\\|^2,$$ \n",
+    "where the summation runs through all pairs $(i,j)$ such that ${\\bf x}_i$ is in the $j$-th cluster with center $\\mu_j$."
    ]
   },
   {
@@ -416,33 +366,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### 5(d)\n",
-    "Calculate the stress $\\sum_{i<j}(d_{ij}(X_{\\rm new})^2 - \\delta_{ij})^2$ and compare it with `model.stress_` .  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Remark\n",
-    "It seems that `model.stress_` is always slightly higher than the stress you found by $X_{\\rm new}$.  \n",
-    "You may check the code by running:  \n",
+    "##### Exercise 5\n",
+    "Let  \n",
     "```python\n",
-    "from sklearn.manifold import _mds\n",
-    "_mds._smacof_single??\n",
+    "X = 5 * np.random.randn(1000,2)\n",
+    "lengths = np.linalg.norm(X, axis=1)\n",
+    "band1 = (lengths > 1) & (lengths <2)  \n",
+    "band2 = (lengths > 3) & (lengths <4)  \n",
+    "X = X[band1 | band2, :]\n",
     "```\n",
-    "In the `for` loop, the stress is computed for $X=X_k$ and then $X$ is updated by $X_{k+1}$.  \n",
-    "The code returns the stress of $X_k$ and the embedding $X_{k+1}$, which has lower stress.  \n",
-    "This seems a bug."
+    "Apply the $k$-means algorithm to `X` with $k=2$  \n",
+    "(or other $k$ if you wish)  \n",
+    "and get the prediction `y_new` .  \n",
+    "Plot the points (rows) in `X` with `c=y_new` .  \n",
+    "Plot the cluster centers in red.  \n",
+    "Is it a good clustering?  \n",
+    "Why it is good?  Or why it does not work well?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
    ]
   }
  ],
