KMeans sklearn remove description of the parameter "algorithm"

--- a/KMeans-with-scikit-learn.ipynb
+++ b/KMeans-with-scikit-learn.ipynb
@@ -46,8 +46,7 @@
     "## Parameters\n",
     "- `n_clusters`: number of clusters\n",
     "- `init`: `\"k-means++\"`, `\"random\"`, or an array of shape `(n_clusters, n_features)`\n",
-    "- `n_init`: the function will run the $k$-means algorithm `n_init` times to get a best performance\n",
-    "- `algorithm`: `\"full\"` or `\"elkan\"`"
+    "- `n_init`: the function will run the $k$-means algorithm `n_init` times to get a best performance"
    ]
   },
   {
