KMeans scratch done

--- a/KMeans-from-scratch.ipynb
+++ b/KMeans-from-scratch.ipynb
@@ -131,8 +131,8 @@
    "metadata": {},
    "source": [
     "##### Exercise 1\n",
-    "Try to turn `verbose=2` .  \n",
-    "Check if the stress is decreasing."
+    "Modify your code so that it prints the inertia at each iteration.  \n",
+    "Is it decreasing?"
    ]
   },
   {
@@ -151,15 +151,78 @@
     "##### Exercise 2\n",
     "Let  \n",
     "```python\n",
-    "import scipy.linalg as LA\n",
-    "arr = np.random.randn(10,10)\n",
-    "Q,R = LA.qr(arr)\n",
-    "```\n",
-    "Let $X_k$ be the output of applying your MDS function to the `hidden_text.csv` data with `r=2` .  \n",
-    "Plot the points (rows) in $X_k$.  \n",
-    "Plot the points (rows) in $X_kQ$.  \n",
-    "Compute the stress of $X_k$ and the stress of $X_kQ$.   \n",
-    "(Some rotation do not change the stress.)"
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris()\n",
+    "X = iris.data\n",
+    "y_iris = iris.target\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(a)\n",
+    "Use your function to apply the $k$-means algorithm with $k=3$.  \n",
+    "What is the inertia?  \n",
+    "Run it several times to see if the results are always the same.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(b)\n",
+    "Use `sklearn.cluster.KMeans` to apply the $k$-means algorithm with $k=3$.  \n",
+    "What is the inertia?  \n",
+    "Run it several times to see if the results are always the same.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(c)\n",
+    "Pick a label `labels` that you like.  \n",
+    "Compute the cluster centers of `X` corresponding to `labels` .  \n",
+    "Is this inertia bigger or smaller than the previous two answers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(d)\n",
+    "The label `y_iris` is the \"correct\" real-world answer.  \n",
+    "Compute the cluster centers and the inertia.  \n",
+    "Is this inertia bigger or smaller than the answers in 2(a) and 2(b)?"
    ]
   },
   {
@@ -176,8 +239,11 @@
    "metadata": {},
    "source": [
     "##### Exercise 3\n",
-    "Apply your MDS function to the `hidden_text.csv` data with `r=2` .  \n",
-    "How low can the stress be?"
+    "The $k$-means algorithm is a deterministic algorithm once the initial cluster centers have been determined.  \n",
+    "Therefore, your function and `sklearn.cluster.KMeans` should obtain the same result when `init` is given.  \n",
+    "Check if this is true.  \n",
+    "\n",
+    "Note:  There are still many subtle differences, for example, `sklearn` uses the location of centers to test the convergence but our algorithm uses the label to test the convergence."
    ]
   },
   {
