DBSCAN scratch correct several errors

--- a/DBSCAN-from-scratch.ipynb
+++ b/DBSCAN-from-scratch.ipynb
@@ -34,25 +34,27 @@
     "- `X` (whose `N` rows are samples and `d` columns are features)\n",
     "- `eps`: the $\\epsilon$ used for finding neighborhood\n",
     "- `min_samples`: a sample is considered as a core sample if its $\\epsilon$-ball contains at least `min_sample` samples (including itself)\n",
+    "- `draw`: boolean, return a illustrative figure or not\n",
     "\n",
     "**Output:**  \n",
+    "A tuple `(y_new, core_indices, fig)`  or `(y_new, core_indices)` depending on `draw` or not.    \n",
     "- `y_new`: an array of shape `(N,)` that records the labels in of each sample, where `-1` stands for a noise \n",
     "- `core_indices`: an array of shape `(n_core_samples,)` that stores the indices of the core samples\n",
+    "- `fig`: an illustrative figure showing the data points, DFS tree, core samples, and noises\n",
     "\n",
     "**Steps:**\n",
-    "1. Build a tuple `nbrhoods` that stores `i: array of indices of its neighbors` .  \n",
+    "1. Build a list `nbrhoods` whose `i`-th element is the array of the indices of its neighbors.  \n",
     "Here two points are neighbors if the distance between them is less than or equal to `eps` .  \n",
     "A point is considered as its neighbor.\n",
     "2. If sample `i` has at least `min_samples` neighbors, then it is called a core sample.  \n",
     "Store the indices of core samples in the array `core_indices` .\n",
     "3. Set `label_num = 0`.  Label every sample as with `-1`.  For each sample `i`, do the following [DFS](https://en.wikipedia.org/wiki/Depth-first_search):\n",
     "    1. if sample `i` is a core labeled by `-1`, label it with `label_num`; otherwise, skip the following steps and move on the the next sample.\n",
-    "    2. let `stack = neighbors of sample i`\n",
-    "    3. take (and remove) the first element `j` in `stack`\n",
-    "    4. if `j` is labeled by `-1`, label it with `label_num`  \n",
-    "    5. if `j` is a core, insert the neighbors of `j` at the beginning of `stack`  \n",
-    "    6. repeat Steps C, D, E until `stack` is empty\n",
-    "    7. `label_num += 1`\n",
+    "    2. let `stack = [i]`\n",
+    "    3. take (and remove) the last element `j` in `stack`\n",
+    "    4. if `j` is labeled by `-1`, label it with `label_num`; moreover, if `j` is a core, insert the neighbors of `j` at the end of `stack`  \n",
+    "    5. repeat Steps C, D, E until `stack` is empty\n",
+    "    6. `label_num += 1`\n",
     "4. Return the labels as `y_new` .\n"
    ]
   },
