correct description of X in many files

--- a/DBSCAN-from-scratch.ipynb
+++ b/DBSCAN-from-scratch.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Algorithm\n",
     "**Input:**  \n",
-    "- `X` (whose `N` rows are samples and `d` columns are features)\n",
+    "- `X`: an array of shape `(N,d)` whose rows are samples and columns are features\n",
     "- `eps`: the $\\epsilon$ used for finding neighborhood\n",
     "- `min_samples`: a sample is considered as a core sample if its $\\epsilon$-ball contains at least `min_sample` samples (including itself)\n",
     "- `draw`: boolean, return a illustrative figure or not\n",
