--- a/KMeans-from-scratch.ipynb
+++ b/KMeans-from-scratch.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Algorithm\n",
     "**Input:**  \n",
-    "- `X` (whose `N` rows are samples and `d` columns are features)\n",
+    "- `X`: an array of shape `(N,d)` whose rows are samples and columns are features\n",
     "- `k`: number of clusters\n",
     "- `init`: \"random\" or an array of shape (k,d)  \n",
     "if \"random\", `k` points are chosen randomly from X as the initial cluster centers  \n",
