--- a/MDS-from-scratch.ipynb
+++ b/MDS-from-scratch.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Algorithm\n",
     "**Input:**  \n",
-    "- `X` (whose `N` rows are samples and `d` columns are features)\n",
+    "- `X`: an array of shape `(N,d)` whose rows are samples and columns are features\n",
     "- `r`: target dimension\n",
     "- `n_iter=100`: number of iterations\n",
     "- `verbose=0`: verbose level;  \n",
