--- a/PCA-from-scratch.ipynb
+++ b/PCA-from-scratch.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Algorithm\n",
     "**Input:**  \n",
-    "- `X` (whose `N` rows are samples and `d` columns are features)\n",
+    "- `X`: an array of shape `(N,d)` whose rows are samples and columns are features\n",
     "- `r`: target dimension\n",
     "\n",
     "**Output:**\n",
