DBSCAN scratch update algorithm items

--- a/DBSCAN-from-scratch.ipynb
+++ b/DBSCAN-from-scratch.ipynb
@@ -54,8 +54,7 @@
     "    3. take (and remove) the last element `j` in `stack`\n",
     "    4. if `j` is labeled by `-1`, label it with `label_num`; moreover, if `j` is a core, insert the neighbors of `j` at the end of `stack`  \n",
     "    5. repeat Steps C, D, E until `stack` is empty\n",
-    "    6. `label_num += 1`\n",
-    "4. Return the labels as `y_new` .\n"
+    "    6. `label_num += 1`"
    ]
   },
   {
