correct Test statement in from scratch series

--- a/KMeans-from-scratch.ipynb
+++ b/KMeans-from-scratch.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "source": [
     "## Test\n",
-    "Take some sample data from [MDS-with-scikit-learn](MDS-with-scikit-learn.ipynb) and check if your code generates similar outputs with the existing packages."
+    "Take some sample data from [KMeans-with-scikit-learn](KMeans-with-scikit-learn.ipynb) and check if your code generates similar outputs with the existing packages."
    ]
   },
   {
