--- a/LinearRegression-from-scratch.ipynb
+++ b/LinearRegression-from-scratch.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "source": [
     "## Test\n",
-    "Take some sample data from [LinearRegression-with-scikit-learn](MDS-with-scikit-learn.ipynb) and check if your code generates similar outputs with the existing packages."
+    "Take some sample data from [LinearRegression-with-scikit-learn](LinearRegression-with-scikit-learn.ipynb) and check if your code generates similar outputs with the existing packages."
    ]
   },
   {
