--- a/DBSCAN-from-scratch.ipynb
+++ b/DBSCAN-from-scratch.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "source": [
     "## Test\n",
-    "Take some sample data from [MDS-with-scikit-learn](MDS-with-scikit-learn.ipynb) and check if your code generates similar outputs with the existing packages."
+    "Take some sample data from [DBSCAN-with-scikit-learn](DBSCAN-with-scikit-learn.ipynb) and check if your code generates similar outputs with the existing packages."
    ]
   },
   {
