LinearRegression change alpha to learning rate

--- a/LinearRegression-from-scratch.ipynb
+++ b/LinearRegression-from-scratch.ipynb
@@ -35,7 +35,7 @@
     "- `y`: the labels of shape `(d,)`\n",
     "- `fit_intercept`: whether to calculate the intercept or not  \n",
     "- `algorithm`: `\"projction\"` or `\"grad_descent\"`\n",
-    "- `alpha`: learning rate for the gradient descent algorithm\n",
+    "- `learning_rate`: learning rate for the gradient descent algorithm\n",
     "- `n_iter`: number of iterations for the gradient descent algorithm \n",
     "\n",
     "**Output:**  \n",
