LinearRegression fix typos

--- a/LinearRegression-with-scikit-learn.ipynb
+++ b/LinearRegression-with-scikit-learn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DBSCAN with scikit learn"
+    "# LinearRegression with scikit learn"
    ]
   },
   {
@@ -133,7 +133,7 @@
     "Let  \n",
     "```python\n",
     "c = 100 * np.random.rand(100)\n",
-    "f = 1.8*x + 32 + 5*np.random.randn(10)\n",
+    "f = 1.8*x + 32 + 5*np.random.randn(100)\n",
     "```\n",
     "be a collection of temperature data of 100 days,  \n",
     "where `c` stores them in Celsius and  \n",
