--- a/PolynomialRegression-with-scikit-learn.ipynb
+++ b/PolynomialRegression-with-scikit-learn.ipynb
@@ -209,6 +209,83 @@
     "##### Exercise 2\n",
     "Let  \n",
     "```python\n",
+    "x1 = np.arange(5)\n",
+    "X = np.vstack([x1]).T\n",
+    "\n",
+    "model = PolynomialFeatures(degree=3, include_bias=False)\n",
+    "X_ex = model.fit_transform(X)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(a)\n",
+    "Understand the relation between `X` and `X_ex` .  \n",
+    "Can you generate `X_ex` by boradcasting instead of the `PolynomialFeatures` function?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(b)\n",
+    "Switch the setting to `include_bias=True` .  \n",
+    "Understand the relation between `X` and `X_ex` .  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2(c)\n",
+    "Let  \n",
+    "```python\n",
+    "x1 = np.arange(5)\n",
+    "x2 = np.arange(5,10)\n",
+    "X = np.vstack([x1,x2]).T\n",
+    "\n",
+    "model = PolynomialFeatures(degree=2, include_bias=False)\n",
+    "X_ex = model.fit_transform(X)\n",
+    "```\n",
+    "Print `model.powers_` and understand the relation between `X` and `X_ex` .  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exercise 3\n",
+    "Let  \n",
+    "```python\n",
     "r = 100 * np.random.rand(100)\n",
     "area = 4*np.pi*r**2 + 0.5*np.random.randn(100)\n",
     "```\n",
@@ -232,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 3\n",
+    "##### Exercise 4\n",
     "Let  \n",
     "```python\n",
     "r = 100 * np.random.rand(100)\n",
@@ -265,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 4\n",
+    "##### Exercise 5\n",
     "Let  \n",
     "```python\n",
     "x = np.arange(10)\n",
@@ -293,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 5\n",
+    "##### Exercise 6\n",
     "Let  \n",
     "```python\n",
     "x = np.arange(10)\n",
