LinearRegression scratch remove unused cell

--- a/LinearRegression-from-scratch.ipynb
+++ b/LinearRegression-from-scratch.ipynb
@@ -32,7 +32,7 @@
     "## Algorithm\n",
     "**Input:**  \n",
     "- `X`: an array of shape `(N,d)` whose rows are samples and columns are features\n",
-    "- `y`: the labels of shape `(d,)`\n",
+    "- `y`: the labels of shape `(N,)`\n",
     "- `fit_intercept`: whether to calculate the intercept or not  \n",
     "- `algorithm`: `\"projction\"` or `\"grad_descent\"`\n",
     "- `learning_rate`: learning rate for the gradient descent algorithm\n",
@@ -156,15 +156,6 @@
    "outputs": [],
    "source": [
     "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model "
    ]
   },
   {
