--- a/LinearRegression-from-scratch.ipynb
+++ b/LinearRegression-from-scratch.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "source": [
     "###### 2(b)\n",
-    "Change `alpha=0.1` .  \n",
+    "Change `learning_rate=0.1` .  \n",
     "What happened?"
    ]
   },
@@ -215,15 +215,24 @@
    "metadata": {},
    "source": [
     "###### 2(c)\n",
-    "Change `alpha=0.0001` .  \n",
+    "Change `learning_rate=0.0001` .  \n",
     "What happened?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### 2(c)\n",
+    "###### 2(d)\n",
     "Modify your code so that it prints the mean square error at each step of the gradient descent.  \n",
     "Check if it is always decreasing."
    ]
@@ -235,15 +244,6 @@
    "outputs": [],
    "source": [
     "### your answer here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed"
    ]
   },
   {
