--- a/LinearRegression-with-scikit-learn.ipynb
+++ b/LinearRegression-with-scikit-learn.ipynb
@@ -32,7 +32,7 @@
     "## Code\n",
     "```python\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "model = LinearRegression()\n",
+    "model = LinearRegression(<parameters>)\n",
     "model.fit(X, y)\n",
     "y_new = model.predict(X_test)\n",
     "```\n",
