knn sklearn done

--- a/KNeighborsClassifier-with-scikit-learn.ipynb
+++ b/KNeighborsClassifier-with-scikit-learn.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,10 +88,7 @@
    "metadata": {},
    "source": [
     "###### 1(a)\n",
-    "Use `plt.scatter` to plot the points with `x` and `y` .  \n",
-    "Use `plt.plot( ..., c='r')` to plot the line with `x_test` and `y_new` .  \n",
-    "Print `model.coef_` and  `model.intercept_` .  \n",
-    "Can you guess these values by the definition of `y` ?"
+    "Plot the points (rows) in `X` with `c=y` .  "
    ]
   },
   {
@@ -108,7 +105,8 @@
    "metadata": {},
    "source": [
     "###### 1(b)\n",
-    "Redo 1(a) with the setting `fit_intercept=False` ."
+    "Use `np.random.rand` to make 1000 random points in the region $-5\\leq x\\leq 5$, $-5\\leq y\\leq 5$.  \n",
+    "Make a prediction of them and plot them upon your previous figure."
    ]
   },
   {
@@ -121,72 +119,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "KNeighborsClassifier?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import load_iris\n",
-    "iris = load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "model = KNeighborsClassifier()\n",
-    "model.fit(X, y)\n",
-    "y_new = model.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.classes_"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "##### Exercise 2\n",
     "Let  \n",
     "```python\n",
-    "x1 = np.arange(5)\n",
-    "X = np.vstack([x1]).T\n",
-    "\n",
-    "model = PolynomialFeatures(degree=3, include_bias=False)\n",
-    "X_ex = model.fit_transform(X)\n",
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
     "```"
    ]
   },
@@ -195,8 +137,10 @@
    "metadata": {},
    "source": [
     "###### 2(a)\n",
-    "Understand the relation between `X` and `X_ex` .  \n",
-    "Can you generate `X_ex` by boradcasting instead of the `PolynomialFeatures` function?"
+    "Use `X` and `y` to train a $k$-nearest neighbors classification model with `n_neighbors=5` .  \n",
+    "Let `y_new` be the prediction.  \n",
+    "Calculate the accuracy score between `y` and `y_new` ,  \n",
+    "that is, the number of correct answers divided by the number of samples."
    ]
   },
   {
@@ -213,8 +157,12 @@
    "metadata": {},
    "source": [
     "###### 2(b)\n",
-    "Switch the setting to `include_bias=True` .  \n",
-    "Understand the relation between `X` and `X_ex` .  "
+    "Let  \n",
+    "```python\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_new, y)\n",
+    "```\n",
+    "Check if the output is the same as your previous answer."
    ]
   },
   {
@@ -231,16 +179,8 @@
    "metadata": {},
    "source": [
     "###### 2(c)\n",
-    "Let  \n",
-    "```python\n",
-    "x1 = np.arange(5)\n",
-    "x2 = np.arange(5,10)\n",
-    "X = np.vstack([x1,x2]).T\n",
-    "\n",
-    "model = PolynomialFeatures(degree=2, include_bias=False)\n",
-    "X_ex = model.fit_transform(X)\n",
-    "```\n",
-    "Print `model.powers_` and understand the relation between `X` and `X_ex` .  "
+    "Change the model to the setting `n_neighbors=1` .  \n",
+    "Does the accuracy increase or decrease?  Why?"
    ]
   },
   {
@@ -259,14 +199,21 @@
     "##### Exercise 3\n",
     "Let  \n",
     "```python\n",
-    "r = 100 * np.random.rand(100)\n",
-    "area = 4*np.pi*r**2 + 0.5*np.random.randn(100)\n",
-    "```\n",
-    "be a collection of data of 100 balls,  \n",
-    "where `c` stores the radii and  \n",
-    "`area` stores the surface areas.  \n",
-    "Suppose you knows nothing about the formula of the surface area of a sphere.  \n",
-    "How would you guess their relation?"
+    "from sklearn.datasets import load_digits\n",
+    "digits = load_digits()\n",
+    "mask = (digits.target == 0) | (digits.target == 1)\n",
+    "X = digits.data[mask]\n",
+    "y = digits.target[mask]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 3(a)\n",
+    "Train a $k$-nearest neighbors classification model.  \n",
+    "How is its accuracy score?"
    ]
   },
   {
@@ -282,17 +229,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 4\n",
-    "Let  \n",
+    "###### 3(b)\n",
+    "Use any software or online app to draw a picture of 0 or 1.  \n",
+    "Save it as a file, e.g., `my_digit.png` .  \n",
+    "Use the following code to load it.  \n",
     "```python\n",
-    "r = 100 * np.random.rand(100)\n",
-    "volume = 4/3*np.pi*r**3 + 0.5*np.random.randn(100)\n",
+    "from PIL import Image\n",
+    "img = Image.open(\"my_digit.png\").resize(8,8)\n",
     "```\n",
-    "be a collection of data of 100 balls,  \n",
-    "where `c` stores the radii and  \n",
-    "`volume` stores the volumes.  \n",
-    "Suppose you knows nothing about the formula of the surface area of a sphere.  \n",
-    "How would you guess their relation?"
+    "Does the model give you the right answer?  \n",
+    "Each of you can do 5 pictures.  \n",
+    "Let's see what is the accuracy score."
    ]
   },
   {
@@ -315,19 +262,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 5\n",
-    "Let  \n",
+    "##### Exercise 4\n",
+    "For a supervised learning model, you have to partition your data into a training set and a testing set.  \n",
+    "You may do it easily by  \n",
     "```python\n",
-    "x = np.arange(10)\n",
-    "y = 0.1*x**2 + 0.2*x + 0.3 + 0.5*np.random.randn(10)\n",
-    "X = x[:,np.newaxis]\n",
-    "x_test = np.linspace(0,10,20)\n",
-    "X_test = x_test[:,np.newaxis]\n",
-    "```\n",
-    "For `k = 0, ..., 4`, run the polynomial regression model with `degree=k`.  \n",
-    "Let `scores` be a list storing their scores.  \n",
-    "Plot the scores.  \n",
-    "Which degree is an appropriate guess?"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 4(a)\n",
+    "Split the data in Exercise 2.  \n",
+    "Use the training set to train the model.  \n",
+    "Apply the trained model to the testing set.  \n",
+    "How is the accuracy?  \n",
+    "Run it several time and get an average."
    ]
   },
   {
@@ -343,22 +296,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 6\n",
+    "###### 4(b)\n",
+    "Split the data in Exercise 3.  \n",
+    "Use the training set to train the model.  \n",
+    "Apply the trained model to the testing set.  \n",
+    "How is the accuracy?  \n",
+    "Run it several time and get an average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exercise 5\n",
     "Let  \n",
-    "```python\n",
-    "x = np.arange(10)\n",
-    "y = 0.1*x**2 + 0.2*x + 0.3 + 0.5*np.random.randn(10)\n",
-    "X = x[:,np.newaxis]\n",
-    "\n",
-    "model = PolynomialRegression(2)\n",
-    "model.fit(X, y)\n",
-    "y_new = model.predict(X)\n",
-    "\n",
-    "a0 = model[1].intercept_\n",
-    "a1,a2 = model[1].coef_\n",
-    "```\n",
-    "The prediction `y_new` is supposed to be the same as `a0 + a1*x + a2*x**2` .  \n",
-    "Check if it is true."
+    "```python \n",
+    "X = 5 * np.random.randn(1000,2)\n",
+    "lengths = np.linalg.norm(X, axis=1)\n",
+    "band1 = (lengths > 1) & (lengths <2)  \n",
+    "band2 = (lengths > 3) & (lengths <4)  \n",
+    "X = X[band1 | band2, :]\n",
+    "y = np.array([0]*band1.shape[0] + [1]*band2.shape[0])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 5(a)\n",
+    "Go through the split-train-test process.  \n",
+    "What is the accuracy score?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 5(b)\n",
+    "Use some random points to plot the regions for each class.  \n",
+    "(Just as what we did in Exercise 1.)"
    ]
   },
   {
